--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
-# dependencies
+# Dependencies
 /node_modules
 
-# testing
+# Testing
 /coverage
 
-# production
+# Production
 /build
 
-# misc
+# Misc
 .DS_Store
 .env.local
 .env.development.local
