Mixing exp merging with the master branch

--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,7 @@
 # Production
 /build
 
-<<<<<<< HEAD
-# misc.
-=======
-# Misc
->>>>>>> exp
+# Misc.
 .DS_Store
 .env.local
 .env.development.local
