--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@babel/register": "^7.0.0",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.5",
     "ejs": "^2.6.1",
     "event-stream": "^4.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "flatmap-stream": "0.0.1-security",
+    "mongoose": "^5.4.2",
+    "morgan": "^1.9.1",
     "mysql2": "^1.6.1",
     "react-meta-tags": "^0.7.1",
     "react-router-dom": "^4.3.1"
@@ -30,6 +33,7 @@
     "concurrently": "^4.0.1",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
+    "errorhandler": "^1.5.0",
     "mini-css-extract-plugin": "^0.4.3",
     "mixin-loader": "^2.0.3",
     "node-sass": "^4.9.3",
@@ -44,7 +48,7 @@
     "uglifyjs-webpack-plugin": "^2.0.0",
     "webpack": "^4.19.0",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.8",
+    "webpack-dev-server": "^3.1.14",
     "webpack-fix-style-only-entries": "0.0.4",
     "webpack-manifest-plugin": "^2.0.4"
   },
