--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "mongoose": "^5.4.2",
+    "jsonwebtoken": "^8.4.0",
     "morgan": "^1.9.1",
-    "mysql2": "^1.6.1"
+    "mysql2": "^1.6.1",
+    "sequelize": "^4.42.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.0",
