--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "psearch",
+  "name": "app",
   "version": "1.0.0",
   "description": "",
-  "main": "app/start.js",
+  "main": "start.js",
   "dependencies": {
     "@babel/core": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
@@ -12,57 +12,16 @@
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
     "ejs": "^2.6.1",
+    "errorhandler": "^1.5.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.4.0",
     "morgan": "^1.9.1",
-    "mysql2": "^1.6.1",
+    "mysql2": "^1.6.4",
     "sequelize": "^4.42.0"
   },
-  "devDependencies": {
-    "@babel/cli": "^7.1.0",
-    "@babel/polyfill": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.0-beta.6",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "clean-webpack-plugin": "^0.1.19",
-    "compass-mixins": "^0.12.10",
-    "compression-webpack-plugin": "^2.0.0",
-    "concurrently": "^4.0.1",
-    "cross-env": "^5.2.0",
-    "css-loader": "^1.0.0",
-    "errorhandler": "^1.5.0",
-    "flatmap-stream": "0.0.1-security",
-    "mini-css-extract-plugin": "^0.4.3",
-    "mixin-loader": "^2.0.3",
-    "node-sass": "^4.9.3",
-    "nodemon": "^1.18.4",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "path": "^0.12.7",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-hot-loader": "^4.3.8",
-    "react-meta-tags": "^0.7.3",
-    "react-router-dom": "^4.3.1",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.0",
-    "uglifyjs-webpack-plugin": "^2.0.0",
-    "webpack": "^4.19.0",
-    "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-fix-style-only-entries": "0.0.4",
-    "webpack-manifest-plugin": "^2.0.4"
-  },
-  "scripts": {
-    "dev": "concurrently --kill-others \"npm run wp-watch\" \"npm run wp-server\" \"npm run nj-dev-server\" \"npm run compass\"",
-    "prod": "concurrently --kill-others \"npm run wp-prod\"",
-    "wp-watch": "cross-env NODE_ENV=development webpack --w",
-    "wp-server": "cross-env NODE_ENV=development webpack-dev-server",
-    "wp-prod": "cross-env NODE_ENV=production webpack",
-    "nj-dev-server": "cross-env NODE_ENV=development nodemon app/start.js",
-    "nj-prod-server": "cross-env NODE_ENV=production nodemon app/start.js",
-    "compass": "compass watch"
-  },
-  "author": "Soldat8889",
+  "devDependencies": {},
+  "scripts": {},
+  "author": "",
   "license": "ISC"
 }
