[Upgrade / Fix] When the verif. webp support is done: adding cookie to remember it [Fix] .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,6 @@ typings/
 
 # # # #
 
-# dist folder
-public/dist/app.js
-public/dist/main-js.js
+# dist files
+/public/dist/app.js
+/public/dist/main-js.js
