--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-hot-loader": "^4.3.8",
     "react-meta-tags": "^0.7.3",
     "react-router-dom": "^4.3.1",
+    "react-router-hash-link": "^1.2.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "uglifyjs-webpack-plugin": "^2.0.0",
