[Add NPM Package] prop-types package, [Modification] Separate Authentication Components -In progress

--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "flatmap-stream": "0.0.1-security",
     "mini-css-extract-plugin": "^0.4.3",
     "mixin-loader": "^2.0.3",
+    "mobile-detect": "^1.4.3",
     "node-sass": "^4.9.3",
     "nodemon": "^1.18.4",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "path": "^0.12.7",
+    "prop-types": "^15.7.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-hot-loader": "^4.3.8",
