--- a/.babelrc
+++ b/.babelrc
@@ -11,7 +11,8 @@
 		}]
 	],
 	"plugins": [
+		["@babel/plugin-proposal-class-properties", { "loose": true }],
 		"syntax-dynamic-import",
-		"react-hot-loader/babel"
+		"react-hot-loader/babel",
 	]
 }
