--- a/.gitignore
+++ b/.gitignore
@@ -83,5 +83,6 @@ typings/
 # # # #
 
 # dist files
-/public/dist/app.js
-/public/dist/main-js.js
+public/dist/app.js
+public/dist/main-js.js
+public/dist/hot/
