--- a/package.json
+++ b/package.json
@@ -4,55 +4,57 @@
   "description": "",
   "main": "app/start.js",
   "dependencies": {
-    "@babel/core": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/register": "^7.0.0",
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/register": "^7.4.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
-    "cookie-parser": "^1.4.3",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "ejs": "^2.6.1",
-    "express": "^4.16.3",
-    "express-session": "^1.15.6",
-    "jsonwebtoken": "^8.4.0",
+    "express": "^4.16.4",
+    "express-session": "^1.16.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
-    "mysql2": "^1.6.1",
-    "sequelize": "^4.42.0"
+    "mysql2": "^1.6.5",
+    "sequelize": ">=5.3.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.1.0",
-    "@babel/polyfill": "^7.0.0",
+    "@babel/cli": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/polyfill": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.0-beta.6",
+    "@hot-loader/react-dom": "^16.8.6",
+    "babel-loader": "^8.0.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "clean-webpack-plugin": "^0.1.19",
     "compass-mixins": "^0.12.10",
     "compression-webpack-plugin": "^2.0.0",
-    "concurrently": "^4.0.1",
+    "concurrently": "^4.1.0",
     "cross-env": "^5.2.0",
-    "css-loader": "^1.0.0",
+    "css-loader": "^1.0.1",
     "errorhandler": "^1.5.0",
     "flatmap-stream": "0.0.1-security",
-    "mini-css-extract-plugin": "^0.4.3",
+    "mini-css-extract-plugin": "^0.4.5",
     "mixin-loader": "^2.0.3",
     "mobile-detect": "^1.4.3",
-    "node-sass": "^4.9.3",
-    "nodemon": "^1.18.4",
+    "node-sass": "^4.11.0",
+    "nodemon": "^1.18.11",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-hot-loader": "^4.3.8",
-    "react-meta-tags": "^0.7.3",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-hot-loader": "^4.8.3",
+    "react-meta-tags": "^0.7.4",
     "react-router-dom": "^4.3.1",
     "react-router-hash-link": "^1.2.1",
     "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.0",
-    "uglifyjs-webpack-plugin": "^2.0.0",
-    "webpack": "^4.19.0",
-    "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.14",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.3.1",
     "webpack-fix-style-only-entries": "0.0.4",
     "webpack-manifest-plugin": "^2.0.4"
   },
@@ -60,7 +62,7 @@
     "dev": "concurrently --kill-others \"npm run wp-watch\" \"npm run wp-server\" \"npm run nj-dev-server\" \"npm run compass\"",
     "prod": "concurrently --kill-others \"npm run wp-prod\"",
     "wp-watch": "cross-env NODE_ENV=development webpack --w",
-    "wp-server": "cross-env NODE_ENV=development webpack-dev-server",
+    "wp-server": "cross-env NODE_ENV=development webpack-dev-server --hot",
     "wp-prod": "cross-env NODE_ENV=production webpack",
     "nj-dev-server": "cross-env NODE_ENV=development nodemon app/start.js",
     "nj-prod-server": "cross-env NODE_ENV=production nodemon app/start.js",
