[Add] Database System, SignUp System, LogIn System [Edit] Structuring App.jsx & main.jsx [Add package] axios passport-local react-ga mongoose bcrypt [Remove package] bcryptjs [Add new route] Dashboard '/dashboard' & LogOut '/logout' [Add] Protected Route [Reform] Route Express [Add] API System router '/api/'

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@babel/core": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "@babel/register": "^7.4.0",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
@@ -15,9 +15,14 @@
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.5.5",
     "morgan": "^1.9.1",
+    "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
-    "sequelize": ">=5.3.0"
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "react-ga": "^2.5.7",
+    "sequelize": "^5.8.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
@@ -25,6 +30,7 @@
     "@babel/polyfill": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "@hot-loader/react-dom": "^16.8.6",
+    "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "clean-webpack-plugin": "^0.1.19",
@@ -38,7 +44,7 @@
     "mini-css-extract-plugin": "^0.4.5",
     "mixin-loader": "^2.0.3",
     "mobile-detect": "^1.4.3",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "nodemon": "^1.18.11",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "path": "^0.12.7",
