--- a/app/config/config.json
+++ b/app/config/config.json
@@ -1,23 +1,16 @@
 {
-  "development": {
-    "username": "root",
-    "password": "root",
-    "database": "database_development",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  },
-  "test": {
-    "username": "root",
-    "password": "root",
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  },
-  "production": {
-    "username": "root",
-    "password": "root",
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  }
+    "development": {
+        "username": "root",
+        "password": "PGr7h+)S:(A#H|p:BC6eqoqBoMXbbpsAeNM.r)~z",
+        "database": "psearch",
+        "host"    : "127.0.0.1",
+        "dialect" : "mysql"
+    },
+    "production": {
+        "username": "root",
+        "password": "PGr7h+)S:(A#H|p:BC6eqoqBoMXbbpsAeNM.r)~z",
+        "database": "psearch",
+        "host"    : "127.0.0.1",
+        "dialect" : "mysql"
+    }
 }
