--- a/public/config/config-fr.json
+++ b/public/config/config-fr.json
@@ -1,8 +1,9 @@
 {
     "title": {
-        "index": "pSearch: Cherchez, Discutez, Jouez !",
-        "signup": "pSearch: S'inscrire",
-        "login": "pSearch: Se connecter",
+        "index": "pSearch : Cherchez, Discutez, Jouez !",
+        "signup": "pSearch : S'inscrire",
+        "login": "pSearch : Se connecter",
+        "dashboard": "pSearch : Dashboard",
         "errors": {
             "404": "pSearch: Erreur 404"
         }
@@ -11,6 +12,7 @@
         "index": "Qu'est-ce que c'est pSearch ? pSearch est un site web qui permet de rechercher des joueurs, de discuter et de jouer avec eux, qu'ils soient des noobs ou bien des hard-players ! À vos manettes !",
         "signup": "Ayez un compte sur pSearch pour vous ouvrir à une toute nouvelle expérience utilisateur !",
         "login": "Reconnectez vous à votre compte pour revenir à jouer !",
+        "dashboard": "Votre profil",
         "errors": {
             "404": "Vous vous êtes perdu ; cette page n'existe pas ou plus ! Veuillez réessayer ultérieurement ou bien rendez vous sur une autre page qui est existante."
         }
