--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
+    "nprogress": "^0.2.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "react-ga": "^2.5.7",
