--- a/.gitignore
+++ b/.gitignore
@@ -88,7 +88,7 @@ public/dist/main-js.js
 public/dist/hot/
 
 # scss folder
-public/scss
+public/styles/scss
 
 # components folder
 public/components
