--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
+    "ejs": "^2.6.1",
+    "errorhandler": "^1.5.0",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "jsonwebtoken": "^8.5.1",
