--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
@@ -19,7 +19,6 @@
     "errorhandler": "^1.5.0",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
-    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.5",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
