--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "react-dom": "^16.8.6",
     "react-ga": "^2.5.7",
     "react-hot-loader": "^4.8.4",
+    "react-placeholder": "^3.0.2",
     "sequelize": "^5.3.0",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "tar": "^4.4.2"
   },
   "devDependencies": {
