--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.0",
+    "autosize": "^4.0.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
@@ -17,6 +18,7 @@
     "cross-env": "^5.2.0",
     "ejs": "^2.6.1",
     "errorhandler": "^1.5.0",
+    "eslint": "^6.1.0",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "fstream": "^1.0.12",
@@ -32,7 +34,8 @@
     "react-ga": "^2.5.7",
     "react-hot-loader": "^4.8.4",
     "react-placeholder": "^3.0.2",
-    "sequelize": "^5.3.0",
+    "redux": "^4.0.1",
+    "sequelize": "^5.11.0",
     "serve-favicon": "^2.5.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
@@ -66,18 +69,17 @@
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.3.1",
+    "webpack-dev-server": "^3.7.2",
     "webpack-fix-style-only-entries": "0.0.4",
     "webpack-manifest-plugin": "^2.0.4"
   },
   "scripts": {
-    "dev": "concurrently --kill-others \"npm run wp-watch\" \"npm run wp-server\" \"npm run nj-dev-server\" \"npm run compass\"",
+    "build": "concurrently --kill-others \"npm run wp-watch\" \"npm run wp-server\" \"npm run compass\"",
     "prod": "concurrently --kill-others \"npm run wp-prod\"",
     "wp-watch": "cross-env NODE_ENV=development webpack --w",
-    "wp-server": "cross-env NODE_ENV=development webpack-dev-server --hot",
+    "wp-server": "cross-env NODE_ENV=development webpack-dev-server",
     "wp-prod": "cross-env NODE_ENV=production webpack",
-    "nj-dev-server": "cross-env NODE_ENV=development nodemon app/start.js",
-    "nj-prod-server": "cross-env NODE_ENV=production nodemon app/start.js",
+    "server": "cross-env NODE_ENV=development node app/start.js",
     "compass": "compass watch"
   },
   "author": "Soldat8889",
